# python-polylith-example

./: .gitignore  README.md  mypy.ini  pyproject.toml  workspace.toml
.circleci/: config.yml
_deployment/kustomize/base/: deployment.yaml  kustomization.yaml
_deployment/kustomize/base/api/: deployment.yaml  kustomization.yaml  service.yaml
_deployment/kustomize/overlays/development/: deployment.yaml  kustomization.yaml
_kubernetes/base/: deployment.yaml  kustomization.yaml
_kubernetes/overlays/development/: deployment.yaml  kustomization.yaml
_kubernetes/overlays/production/: deployment.yaml  kustomization.yaml
_kubernetes/overlays/staging/: deployment.yaml  kustomization.yaml
_kubernetes/services/api/common/: kustomization.yaml  service.yaml
_kubernetes/services/api/development/: deployment.yaml  kustomization.yaml
_kubernetes/services/api/production/: kustomization.yaml
_kubernetes/services/api/staging/: kustomization.yaml
_kubernetes/services/handlers/development/: kustomization.yaml
_kubernetes/services/handlers/production/: kustomization.yaml
_kubernetes/services/handlers/staging/: kustomization.yaml
bases/demo/consumer/: __init__.py  core.py
bases/demo/consumer_cli/: __init__.py  core.py
bases/demo/greet_api/: __init__.py  core.py
bases/demo/greet_aws_lambda/: __init__.py  core.py
bases/demo/greet_gcp_function/: __init__.py  core.py
bases/demo/message_api/: __init__.py  core.py
bases/demo/messages_gcp_function/: __init__.py  core.py
bases/demo/messages_lambda/: __init__.py  core.py
bases/example/consumer/: __init__.py  core.py
bases/example/greet_api/: __init__.py  core.py
bases/example/greet_aws_lambda/: __init__.py  core.py
bases/example/greet_gcp_function/: __init__.py  core.py
bases/example/message_api/: __init__.py  core.py
bases/my_fastapi/src/demo/my_fastapi/: main.py
bases/my_lambda/src/demo/my_lambda/: lambda_function.py
components/demo/database/: __init__.py  core.py
components/demo/database/message/: crud.py  model.py
components/demo/dictionaries/: __init__.py  core.py
components/demo/greeting/: __init__.py
components/demo/kafka/: __init__.py  consumer.py  core.py  parser.py  producer.py
components/demo/log/: __init__.py
components/demo/message/: __init__.py  core.py
components/demo/schema/: __init__.py  message.py
components/example/database/: __init__.py  core.py
components/example/database/message/: crud.py  model.py
components/example/dictionaries/: __init__.py
components/example/greeting/: __init__.py  core.py
components/example/kafka/: __init__.py  consumer.py  core.py  producer.py
components/example/log/: __init__.py  core.py
components/example/message/: __init__.py  core.py
components/example/schema/: __init__.py
components/hello_world/src/demo/hello_world/: __init__.py  code.py
components/my_logger/src/demo/my_logger/: __init__.py  code.py
development/: __init__.py  david.py
development/ci/: utils.py
development/kafka/: docker-compose.yml
development/poly/: deps.txt
projects/consumer_cli_project/: pyproject.toml
projects/consumer_project/: pyproject.toml
projects/message_fastapi_project/: Dockerfile  README.md  pyproject.toml
projects/my_aws_lambda_project/: package-lock.json  package.json  pyproject.toml  serverless.yml
projects/my_fastapi_project/: Dockerfile  README.md  pyproject.toml
projects/my_fastapi_project/kubernetes/development/: deployment.yaml  kustomization.yaml
projects/my_fastapi_project/kubernetes/staging/: deployment.yaml  kustomization.yaml
projects/my_gcp_function_project/: .gitignore  Makefile  main.py  pyproject.toml
test/: conftest.py
test/bases/demo/consumer_cli/: test_core.py
test/bases/demo/greet_api/: test_core.py
test/bases/demo/messages_lambda/: test_core.py
test/bases/example/consumer/: test_core.py
test/bases/example/consumer_cli/: test_core.py
test/components/demo/database/: test_core.py
test/components/demo/dictionaries/: test_core.py
test/components/demo/greet/: test_core.py
test/components/demo/greeting/: test_core.py
test/components/demo/kafka/: test_core.py
test/components/demo/log/: test_core.py
test/components/demo/message/: test_core.py
test/components/example/database/: test_core.py
test/components/example/dictionaries/: test_core.py
test/components/example/greeting/: test_core.py
test/components/example/kafka/: test_core.py
test/components/example/log/: test_core.py
