[tool.poetry]
name = "Python Polylith Example"
version = "1.0.0"
description = "A Python Polylith example code repo"
authors = ["David Vujic"]
homepage = "https://github.com/davidvujic/python-polylith-example"
repository = "https://github.com/davidvujic/python-polylith-example"
packages = [
    {include = "development"},
    {include = "example/database", from = "components"},
    {include = "example/greeting", from = "components"},
    {include = "example/log", from = "components"},
    {include = "example/message", from = "components"},
    {include = "example/schema", from = "components"},
    {include = "example/greet_api", from = "bases"},
    {include = "example/greet_aws_lambda", from = "bases"},
    {include = "example/greet_gcp_function", from = "bases"},
    {include = "example/message_api", from = "bases"},
    {include = "example/kafka",from = "components"},
    {include = "example/dictionaries",from = "components"},
    {include = "example/consumer",from = "bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
functions-framework = "^3.5.0"
sqlalchemy = "^2.0.23"
confluent-kafka = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv"
