[tool.poetry]
name = "Python Polylith Example"
version = "1.0.0"
description = "A Python Polylith example code repo"
authors = ["David Vujic"]
homepage = "https://github.com/davidvujic/python-polylith-example"
repository = "https://github.com/davidvujic/python-polylith-example"
packages = [
    {include = "example/consumer",from = "bases"},
    {include = "example/greet_api", from = "bases"},
    {include = "example/greet_aws_lambda", from = "bases"},
    {include = "example/greet_gcp_function", from = "bases"},
    {include = "example/message_api", from = "bases"},
    {include = "example/database", from = "components"},
    {include = "example/dictionaries",from = "components"},
    {include = "example/greeting", from = "components"},
    {include = "example/kafka",from = "components"},
    {include = "example/log", from = "components"},
    {include = "example/message", from = "components"},
    {include = "example/schema", from = "components"},
    {include = "development"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.137.2"}
functions-framework = "^3.10.1"
sqlalchemy = "^2.0.50"
confluent-kafka = "^2.14.0"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
isort = "^8.0.1"
mypy = "^2.1.0"
flake8 = "^7.3.0"
pytest = "^9.0.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv"
