[tool.poetry]
name = "consumer_project"
version = "0.1.0"
description = ""
authors = ['David Vujic']
license = ""

packages = [
    {include = "example/consumer", from = "../../bases"},
    {include = "example/kafka",from = "../../components"},
    {include = "example/log",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.2.0"

[tool.poetry.scripts]
consumer = "example.consumer.core:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
