[project]
name = "consumer_project"
version = "0.1.0"
description = ""
license = ""
authors = [{ name = "David Vujic" }]
requires-python = "^3.10"

dependencies = [
  "confluent-kafka~=2.7.0",
]

[project.scripts]
consumer = "example.consumer.core:main"

[tool.poetry]
packages = [
    {include = "example/consumer", from = "../../bases"},
    {include = "example/kafka",from = "../../components"},
    {include = "example/log",from = "../../components"},
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
