[tool.poetry]
name = "message_fastapi_project"
version = "0.1.0"

description = "another example FastAPI project"
authors = ["David Vujic"]
packages = [
    {include = "example/database", from = "../../components"},
    {include = "example/message", from = "../../components"},
    {include = "example/schema", from = "../../components"},
    {include = "example/message_api", from = "../../bases"},
    {include = "example/log",from = "../../components"},
    {include = "example/kafka",from = "../../components"},
    {include = "example/dictionaries",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.28"
confluent-kafka = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
