[tool.poetry]
name = "my_aws_lambda_project"
version = "1.1.1"
description = "an example aws lambda project"
authors = ["David Vujic <david@vujic.se>"]
packages = [
    {include = "demo/hello", from = "../../components/hello/src"},
    {include = "demo/my_lambda", from = "../../bases/my_lambda/src"},
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
