[tool.poetry]
name = "my_aws_lambda_project"
version = "1.1.1"
description = "an example aws lambda project"
authors = ["David Vujic"]
packages = [
    {include = "demo/log", from = "../../components"},
    {include = "demo/message", from = "../../components"},
    {include = "demo/messages_lambda", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
