[tool.poetry]
name = "my_aws_lambda_project"
version = "1.1.1"
description = "an example aws lambda project"
authors = ["David Vujic"]
packages = [
    {include = "example/log", from = "../../components"},
    {include = "example/greeting", from = "../../components"},
    {include = "example/greet_aws_lambda", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
