[tool.poetry]
name = "my_fastapi_project"
version = "0.0.1"
description = "an example FastAPI project"
authors = ["David Vujic"]
packages = [
    {include = "demo/log", from = "../../components"},
    {include = "demo/greeting", from = "../../components"},
    {include = "demo/greet_api", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
