[tool.poetry]
name = "my_fastapi_project"
version = "0.0.1"
description = "an example FastAPI project"
authors = ["David Vujic"]
packages = [
    {include = "example/log", from = "../../components"},
    {include = "example/greeting", from = "../../components"},
    {include = "example/greet_api", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
