[tool.poetry]
name = "my_gcp_function_project"
version = "0.1.0"
description = ""
authors = ['David Vujic']
license = ""

packages = [
    {include = "example/log", from = "../../components"},
    {include = "example/greeting", from = "../../components"},
    {include = "example/greet_gcp_function", from = "../../bases"}
]

include = ["main.py", "requirements.txt"] # added by the build process

[tool.poetry.dependencies]
python = "^3.10"
functions-framework = "^3.5.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
